Fix alignment of categories descriptions on desktop viewport

--- a/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoryItem.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoryItem.scss
@@ -80,6 +80,11 @@
             padding-right: $gutter * 6;
             padding-bottom: $gutter * 1.5;
         }
+
+        @include media-query(large) {
+            // Align with the notch above.
+            padding-left: 7%;
+        }
     }
 
     &__icon {
